--- a/Cooleaf/Application Controllers/NPTodoViewController/NPTodoViewController.xib
+++ b/Cooleaf/Application Controllers/NPTodoViewController/NPTodoViewController.xib
@@ -25,9 +25,12 @@
                         <outlet property="delegate" destination="-1" id="iSZ-64-Kkm"/>
                     </connections>
                 </tableView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="y84-fl-DG5">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="y84-fl-DG5">
                     <rect key="frame" x="20" y="103" width="280" height="96"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="96" id="bYi-9O-eIT"/>
+                    </constraints>
                     <string key="text">The list is empty.
 
 If there is something that needs to be done for this event, you can add it.</string>
@@ -39,10 +42,12 @@ If there is something that needs to be done for this event, you can add it.</str
             <color key="backgroundColor" red="0.97254901959999995" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="fmw-nM-y3Z" firstAttribute="centerX" secondItem="y84-fl-DG5" secondAttribute="centerX" id="02X-H5-5kz"/>
+                <constraint firstItem="y84-fl-DG5" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="4wT-5Z-1VV"/>
                 <constraint firstAttribute="bottom" secondItem="fmw-nM-y3Z" secondAttribute="bottom" id="RpP-Xd-FQP"/>
                 <constraint firstItem="fmw-nM-y3Z" firstAttribute="top" secondItem="1" secondAttribute="top" id="VQd-Qa-7h5"/>
                 <constraint firstItem="fmw-nM-y3Z" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="gWU-Yy-wrq"/>
                 <constraint firstAttribute="trailing" secondItem="fmw-nM-y3Z" secondAttribute="trailing" id="tI5-Jv-sY3"/>
+                <constraint firstItem="y84-fl-DG5" firstAttribute="top" secondItem="1" secondAttribute="top" constant="103" id="x22-QZ-m5t"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
