REmoving corrections on login screen

--- a/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
+++ b/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
@@ -65,7 +65,7 @@
                             <rect key="frame" x="20" y="51" width="256" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
-                            <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="KXm-10-hHT"/>
                             </connections>
@@ -74,7 +74,7 @@
                             <rect key="frame" x="20" y="96" width="256" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
-                            <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="PQn-e0-CMm"/>
                             </connections>
