--- a/Cooleaf/Application Controllers/NPTodoViewController/NPTodoCell.xib
+++ b/Cooleaf/Application Controllers/NPTodoViewController/NPTodoCell.xib
@@ -70,7 +70,7 @@ is taking care of this</string>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                         <state key="normal" title="Take care of this">
-                            <color key="titleColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="0.098039215686274508" green="0.58039215686274503" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
