Forgot password stuff

--- a/Cooleaf/Application Controllers/NPAttendeesViewController/NPAttendeeCell.xib
+++ b/Cooleaf/Application Controllers/NPAttendeesViewController/NPAttendeeCell.xib
@@ -13,8 +13,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="AvatarPlaceholderFemaleMedium" translatesAutoresizingMaskIntoConstraints="NO" id="Fte-GJ-Tlj">
-                        <rect key="frame" x="18" y="12" width="45" height="51"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="AvatarPlaceholderFemaleMedium" translatesAutoresizingMaskIntoConstraints="NO" id="Fte-GJ-Tlj">
+                        <rect key="frame" x="18" y="14" width="45" height="45"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Attendee name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dnf-Zf-TSV">
