--- a/Cooleaf/Application Controllers/NPEventViewController/NPEventViewController.xib
+++ b/Cooleaf/Application Controllers/NPEventViewController/NPEventViewController.xib
@@ -14,7 +14,7 @@
                 <outlet property="nextEventButton" destination="Vbu-Cg-Lbk" id="NEU-Fl-GNF"/>
                 <outlet property="prevEventButton" destination="Vgq-pR-NBw" id="SFc-aJ-yIp"/>
                 <outlet property="resignButton" destination="4fU-yu-eaZ" id="yCT-bf-Gqc"/>
-                <outlet property="rewardLabel" destination="BTy-yr-riV" id="OVi-E0-ahl"/>
+                <outlet property="rewardLabel" destination="mEG-lx-cG8" id="XLQ-HF-uSt"/>
                 <outlet property="tableHeaderView" destination="Ftt-dP-KEn" id="U3B-Vw-VKo"/>
                 <outlet property="tableView" destination="LtW-Vk-q5m" id="Vw7-PD-76d"/>
                 <outlet property="titleLabel" destination="Tsj-Ju-8xZ" id="WQk-J8-eNY"/>
@@ -43,7 +43,7 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
         <view autoresizesSubviews="NO" contentMode="scaleToFill" id="Ftt-dP-KEn" userLabel="Table header view">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="187"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="CoverPhotoPlaceholder" id="2R6-wy-Wxd">
@@ -66,7 +66,7 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FJ3-Qp-ptb">
-                    <rect key="frame" x="91" y="90" width="139" height="25"/>
+                    <rect key="frame" x="91" y="120" width="139" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="JOIN THIS EVENT">
@@ -79,22 +79,15 @@
                         <action selector="joinTapped:" destination="-1" eventType="touchUpInside" id="czb-e9-AKS"/>
                     </connections>
                 </button>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You’ll receive 500 reward points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BTy-yr-riV">
-                    <rect key="frame" x="76" y="117" width="169" height="12"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <color key="textColor" white="0.79791456653225812" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" id="HoX-N1-MWf" userLabel="Loading indicator">
-                    <rect key="frame" x="150" y="93" width="20" height="20"/>
+                    <rect key="frame" x="150" y="123" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4fU-yu-eaZ">
-                    <rect key="frame" x="115" y="107" width="90" height="30"/>
+                    <rect key="frame" x="115" y="137" width="90" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <state key="normal" title="Unregister?">
+                    <state key="normal" title="Unregister">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -106,10 +99,17 @@
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
                 <view contentMode="scaleToFill" id="GXU-bQ-SrX" userLabel="Top separator">
-                    <rect key="frame" x="15" y="154" width="305" height="1"/>
+                    <rect key="frame" x="15" y="184" width="305" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.74117647060000003" green="0.73725490199999999" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reward" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mEG-lx-cG8" userLabel="Reward label">
+                    <rect key="frame" x="20" y="77" width="280" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                    <color key="textColor" red="0.83529411760000005" green="0.68627450980000004" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
