--- a/Cooleaf/Application Controllers/NPEventListViewController/NPCompanyCell.xib
+++ b/Cooleaf/Application Controllers/NPEventListViewController/NPCompanyCell.xib
@@ -6,38 +6,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NPCompanyCell" rowHeight="63" id="aX1-b0-KNO" customClass="NPCompanyCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+        <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NPCompanyCell" rowHeight="57" id="aX1-b0-KNO" customClass="NPCompanyCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aX1-b0-KNO" id="DR2-kf-pS1">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy connecting." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Qrw-5F-5MW">
-                        <rect key="frame" x="16" y="15" width="100" height="13"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M6I-XM-kPw">
+                        <rect key="frame" x="57" y="14" width="98" height="28"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M6I-XM-kPw">
-                        <rect key="frame" x="16" y="32" width="124" height="10"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="gZM-zQ-YLy">
-                        <rect key="frame" x="144" y="14" width="160" height="28"/>
+                        <rect key="frame" x="169" y="14" width="141" height="28"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AvatarPlaceHolderMaleBig" id="C5g-ZI-OH5">
+                        <rect key="frame" x="9" y="8" width="40" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.97254901959999995" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="avatarView" destination="C5g-ZI-OH5" id="X2u-Ex-fIR"/>
                 <outlet property="logoView" destination="gZM-zQ-YLy" id="h1f-Fh-wVT"/>
-                <outlet property="peopleCountLabel" destination="M6I-XM-kPw" id="hOz-zP-bv6"/>
+                <outlet property="nameLabel" destination="M6I-XM-kPw" id="yhH-A3-u6I"/>
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="AvatarPlaceHolderMaleBig" width="73" height="73"/>
+    </resources>
 </document>
